plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

repositories {
    mavenCentral()
}

subprojects {
    group = 'comumu'
    version = '0.0.1'
    sourceCompatibility = '17'

    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
//    apply plugin: 'java-test-fixtures'

    repositories {
        mavenCentral()
    }

    ext {
        set('springCloudVersion', "2023.0.0")
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
//        testImplementation 'com.h2database:h2'
//        runtimeOnly 'com.h2database:h2'
    }

    bootJar { enabled = false }
    jar { enabled = true }

}

project(':fl-api') {
    dependencies {
        implementation project(':fl-common')
        implementation project(':fl-service')
    }
}


project(':fl-admin') {
    dependencies {
        implementation project(':fl-common')
        implementation project(':fl-service')
    }
}


project(':fl-batch') {
    dependencies {
        implementation project(':fl-common')
        implementation project(':fl-core')
        implementation project(':fl-service')
    }
}

project(':fl-chatting') {
    dependencies {
        implementation project(':fl-core')
        implementation project(':fl-common')
//        implementation project(':fl-service')
    }
}
project(':fl-common') {
    dependencies {
        implementation project(':fl-core')
    }
}
project(':fl-core') {
    dependencies {
    }
}
project(':fl-service') {
    dependencies {
        implementation project(':fl-common')
        implementation project(':fl-core')
    }
}
